# Pyman

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/pyman/: Cargo.toml  build.rs
crates/pyman-worker/: Cargo.toml
crates/pyman-worker/src/: lib.rs  main.rs
crates/pyman/src/: app.rs  embed.rs  font.rs  history.rs  icon.rs  lib.rs  main.rs  supervisor.rs  worker.rs
crates/pyman/tests/: app_history_load.rs  cli_naming.rs  font_parse.rs  history_persist.rs  icon_render.rs  stdin_echo.rs
examples/: crash.py  echo.py  hello.py  loop.py
