[package]
name = "pyman-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# This crate is the *only* place pyo3/CPython is linked. Keeping Python out of
# the GUI crate (`pyman`) is what lets the GUI start on a machine without
# Python: the GUI's loader never sees `python3.dll`. See `crates/pyman/build.rs`
# for how this binary gets embedded into the GUI exe at build time.

# The actual worker logic (`run()`) lives in the lib so it's unit-testable; the
# bin is a one-line `std::process::exit(run())` wrapper.
[lib]
name = "pyman_worker"
path = "src/lib.rs"

[[bin]]
name = "pyman-worker"
path = "src/main.rs"

[dependencies]
# abi3-py38: build against CPython's STABLE ABI (minimum 3.8) so a single
# build loads whatever Python the user has on PATH (3.8..3.13+) via the
# version-agnostic `python3.dll`, instead of being bound to a specific minor
# version's `python3XX.dll`. This is what lets the worker run against any
# installed Python, not just the exact one it was built against.
# generate-import-lib: pyo3 synthesizes the `python3.dll` import library at
# build time, so the build needs NO system Python installed (great for CI and
# clean contributor machines).
# auto-initialize: boots the embedded interpreter on first GIL acquisition,
# so the worker's `main` doesn't have to call Py_Initialize itself.
pyo3 = { version = "0.23", features = ["auto-initialize", "abi3-py38", "generate-import-lib"] }
serde_json.workspace = true
