[package]
name = "pyman"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "pyman"
path = "src/main.rs"

[build-dependencies]
# (none) — build.rs only emits linker args, no extra crates needed.

[dependencies]
eframe = "0.29"
egui = "0.29"
dirs = "6"
serde.workspace = true
serde_json.workspace = true
# The GUI never initializes Python itself. The single `pyman` binary also
# serves as the per-script "worker" process (dispatched in `main.rs` via
# `--worker` / the `pyman-worker` alias); in that role it embeds CPython via
# pyo3. `auto-initialize` boots the interpreter on first GIL acquisition,
# which only happens in worker mode — keeping the GUI free of Python.
#
# abi3-py38: build against CPython's STABLE ABI (minimum 3.8) so a single
# build loads whatever Python the user has on PATH (3.8..3.13+) via the
# version-agnostic `python3.dll`, instead of being bound to a specific minor
# version's `python3XX.dll`. This is what lets pyman.exe run on a machine with
# any installed Python, not just the exact one it was built against.
# generate-import-lib: pyo3 synthesizes the `python3.dll` import library
# at build time, so the build needs NO system Python installed (great for CI
# and for clean contributor machines).
pyo3 = { version = "0.23", features = ["auto-initialize", "abi3-py38", "generate-import-lib"] }
# Formatting the per-line wall-clock timestamps in the log viewer (local time).
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Memory-map the CJK system font instead of reading its (often ~40MB) bytes
# into the heap. Already a transitive dep of eframe, so this adds no new crate.
memmap2 = "0.9"
# Native OS file-open dialog for the "浏览..." (browse) button next to the
# script path field. Uses the platform's own dialog (Windows common dialog,
# macOS NSOpenPanel, GTK on Linux) — no bundled widget set, no extra glyphs.
rfd = "0.14"

[dev-dependencies]
# ab_glyph is what egui uses internally to parse fonts; we use it in a test to
# confirm the system CJK fonts we load are actually parseable and cover CJK.
ab_glyph = "0.2"
# Used only in the icon test to write a PNG for manual visual inspection.
image = { version = "0.25", default-features = false, features = ["png"] }
