[package]
name = "pyman"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "pyman"
path = "src/main.rs"

# No build-dependencies: build.rs only sets the Windows subsystem link flags.

[dependencies]
eframe = "0.29"
egui = "0.29"
dirs = "6"
serde.workspace = true
serde_json.workspace = true
# Formatting the per-line wall-clock timestamps in the log viewer (local time).
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Memory-map the CJK system font instead of reading its (often ~40MB) bytes
# into the heap. Already a transitive dep of eframe, so this adds no new crate.
memmap2 = "0.9"
# Native OS file-open dialog for the "浏览..." (browse) button next to the
# script path field. Uses the platform's own dialog (Windows common dialog,
# macOS NSOpenPanel, GTK on Linux) — no bundled widget set, no extra glyphs.
rfd = "0.14"

[dev-dependencies]
# ab_glyph is what egui uses internally to parse fonts; we use it in a test to
# confirm the system CJK fonts we load are actually parseable and cover CJK.
ab_glyph = "0.2"
# Used only in the icon test to write a PNG for manual visual inspection.
image = { version = "0.25", default-features = false, features = ["png"] }
